--- a/ApartmentRentalSystem/ApartmentRentalSystem.csproj
+++ b/ApartmentRentalSystem/ApartmentRentalSystem.csproj
@@ -349,7 +349,7 @@
     <Compile Include="overlayForm.Designer.cs">
       <DependentUpon>overlayForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Program.cs" />
+    <Compile Include="program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="successForm.cs">
       <SubType>Form</SubType>
